--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "vue": "^3.2.31",
+    "vue-chart-3": "^3.1.4",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
