--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "test:unit": "vitest --environment jsdom"
+    "test:unit": "vitest --environment jsdom",
+    "start": "node -sass --watch -o styles sc"
   },
   "dependencies": {
     "axios": "^0.26.1",
@@ -19,6 +20,7 @@
     "@vitejs/plugin-vue": "^2.2.2",
     "@vue/test-utils": "^2.0.0-rc.18",
     "jsdom": "^19.0.0",
+    "sass": "^1.49.9",
     "vite": "^2.8.4",
     "vitest": "^0.5.0"
   }
