--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "socket.io-client": "^4.4.1",
     "vue": "^3.2.31",
     "vue-chart-3": "^3.1.4",
     "vue-router": "^4.0.12",
